@@ -16,7 +16,7 @@
 <hr>
 <a name="sysv"><h2>Replacing sysvinit (GNU/Linux)</h2></a>
 Follow these steps to migrate from <i>sysvinit</i> to <i>runit</i> on
-<a href="http://www.debian.org/releases/woody/">Debian GNU/Linux (woody)</a>.
+<a href="https://www.debian.org/releases/woody/">Debian GNU/Linux (woody)</a>.
 The <tt>/sbin/init</tt> binary is not replaced until step 6, <i>runit</i> is
 the default Unix process no 1 after step 7.
 <p>
@@ -128,8 +128,8 @@ To report success:
 
 <a name="bsd"><h2>Replacing init (*BSD)</h2></a>
 Follow these steps to migrate from <i>init</i> to <i>runit</i> on
-<a href="http://www.openbsd.org/">OpenBSD 2.9</a> or
-<a href="http://www.freebsd.org/">FreeBSD 4.4</a>.
+<a href="https://www.openbsd.org/">OpenBSD 2.9</a> or
+<a href="https://www.freebsd.org/">FreeBSD 4.4</a>.
 The <tt>/sbin/init</tt> binary is not replaced until step 4.
 <h3>Step 1: The three stages</h3>
 <i>runit</i> looks for the three stages implementing the system's
